Blog: Fix scrollbar behaviour

--- a/internal/blog/server/assets/main.css
+++ b/internal/blog/server/assets/main.css
@@ -58,7 +58,7 @@ aside {
 }
 
 pre {
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 a {
